--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,29 @@
 version: '3.3'
 services:
 
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - database_value:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  backend:
+    image: s1gurr0s/foodgram_backend:latest
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: s1gurr0s/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,3 +32,14 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    restart: always
+    depends_on:
+      - backend
+      - frontend
+
+volumes:
+  database_value:
+  static_value:
+  media_value:
